--- a/sigedb/core/templates/index.html
+++ b/sigedb/core/templates/index.html
@@ -14,14 +14,14 @@
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <!-- MENU -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">SIGE</a>
+            <a class="navbar-brand" href="/">SIGE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="ReportLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
